[package]
name = "bc4py_plotter"
version = "0.1.2"
authors = ["namuyan <thhjuuATyahoo.co.jp>"]
edition = "2018"

[dependencies]
blake2b_simd = "0.4.1"
reqwest = "0.9.10"
serde_json = "1.0"
workerpool = "1.2.0"
regex = "1"

[dependencies.colored]
version = "1.7.0"
git = "https://github.com/kurtlawrence/colored"
branch = "win10-color"
